--- a/assets/style.css
+++ b/assets/style.css
@@ -264,7 +264,7 @@ p {
 
 
 .project-one {
-    background-image: url(../images/Movie\ Recommender-WTW.png);
+    background-image: url(../images/Movie-Recommender-WTW.png);
     background-size: cover;
     background-position: center;
     opacity: 0.6;
@@ -279,7 +279,7 @@ p {
 }
 
 .project-two{
-    background-image: url(../images/Workday\ Planner.png);
+    background-image: url(../images/Workday-Planner.png);
     background-size: cover;
     background-position: center;
     opacity: 0.6;
@@ -294,7 +294,7 @@ p {
 }
 
 .project-three{
-    background-image: url(../images/Coding\ Quiz.png);
+    background-image: url(../images/Coding-Quiz.png);
     background-size: cover;
     background-position: center;
     opacity: 0.6;
